@@ -161,6 +161,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12175: BufferedReader.read(-1) now calls raw.readall() if available.
+
 - Issue #12175: FileIO.readall() now only reads the file position and size
   once.
 
